Updated Testimonials section with blockquotes and citations

--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -158,23 +158,27 @@
 
 </main>
 
+<!-- Footer -->
 <footer>
-    <div>
-        <ul>
-            <li><a href="https://www.facebook.com/alxafrica/" target="_blank">Facebook</a></li>
-            <li><a href="https://twitter.com/alx_africa" target="_blank">Twitter</a></li>
-            <li><a href="https://www.instagram.com/alx_africa/" target="_blank">Instagram</a></li>
-        </ul>
-    </div>
-    <hr>
-        <div>
-        <ul>
-            <li><a href="#">Terms of Use</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Cookie Policy</a></li>
-        </ul>
-    </div>
-    <p>© 2020 Techium, made with ♥ by students at ALX.</p>
+    <div>
+        <ul>
+            <li><a href="https://www.facebook.com/alxafrica/" target="_blank">Facebook</a></li>
+            <li><a href="https://twitter.com/alx_africa" target="_blank">Twitter</a></li>
+            <li><a href="https://www.instagram.com/alx_africa/" target="_blank">Instagram</a></li>
+        </ul>
+    </div>
+
+    <!-- Horizontal rule and paragraph -->
+    <hr>
+    <p>© 2020 Techium, made with ♥ by students at ALX.</p>
+
+    <div>
+        <ul>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookie Policy</a></li>
+        </ul>
+    </div>
 </footer>
 
 </body>
