--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -59,7 +59,6 @@
                 </dl>
             </div>
         </section>
-        <!-- Horizontal rule -->
         <section>
             <header>
                 <h2>Horizontal rule</h2>
@@ -68,22 +67,20 @@
                 <hr>
             </div>
         </section>
-
-        <!-- Blockquotes -->
         <section>
             <header>
                 <h2>Blockquotes</h2>
             </header>
             <div>
                 <h3>Inline quote</h3>
-                <p><q>Stay hungry. Stay foolish.</q></p>
+                <q>Stay hungry. Stay foolish.</q>
             </div>
             <div>
                 <h3>Blockquote</h3>
-                <blockquote>
+                <blockquote cite="Kanye West, Musician">
                     I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
-                    <cite>— Kanye West, Musician</cite>
                 </blockquote>
+                <cite>Kanye West, Musician</cite>
             </div>
         </section>
     </main>
