--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -134,7 +134,7 @@
             <!-- Footer -->
             <footer>
                 <div>
-                    <p>234 Washington Street<br>Urbana, Illinois</p>
+                    <address>Washington Street<br>Urbana, Illinois</address>
                 </div>
                 <ul>
                     <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
