--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -115,6 +115,7 @@
             <header>
                 <h2>Table</h2>
             </header>
+            <h2>Star Wars Trilogy Data</h2>
             <table>
                 <thead>
                     <tr>
